# zls-obs-plugin

./: .gitignore  CMakeLists.txt  README.md  build.sh
data/locale/: en-US.ini  fr-FR.ini
src/: zls-plugin.c  zls-source.c
